--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Simon Says Game</h1>
-    <!-- <audio id="audioPlayer" src="" type="audio/mp3"></audio> -->
+    <audio id="audioPlayer" src="" type="audio/mp3"></audio>
     <div class="contain">
         <h2 id="start">Press Start button or any key to start the game.</h2>
         <button type="button" class="start-btn" onclick="startGame()">Start</button>
